--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Keshav Malik",
+  "name": " Hey there! I'm Keshav Malik, a Software Dev 💻.",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "avtar.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
